feat(index): メタ情報とアイコン生成スクリプトを追加
index.htmlにSEO向けのメタ情報を追加し、favicon.svgからアイコンを生成するスクリプトを作成しました。また、package.jsonのビルドスクリプトを更新し、プライバシーポリシーと行動規範のページを静的に生成する機能を追加しました。これにより、サイトの可視性とユーザビリティが向上します。

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,11 @@ compatibility_date = "2025-09-24"
 # Serve static assets produced by Vite from the dist directory
 assets = { directory = "./dist" }
 
+# Optional: set routes when binding a custom domain in code
+# routes = [
+#   { pattern = "aiau.group/*", zone_name = "aiau.group" }
+# ]
+
 # Add routes/custom domain later via Cloudflare dashboard:
 # - DNS: aiau.group -> Cloudflare
 # - Workers Routes: aiau.group/* -> this worker
