--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "icons": "node scripts/gen-icons.mjs",
+    "build": "npm run icons && vite build && node scripts/prerender.mjs",
     "preview": "vite preview --strictPort --port 5173",
     "deploy": "wrangler deploy"
   },
@@ -26,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
