--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,10 @@ main = "src/worker.ts"
 compatibility_date = "2025-09-24"
 
 # Serve static assets produced by Vite from the dist directory
-assets = { directory = "./dist" }
+[assets]
+directory = "./dist"
+binding = "ASSETS"
+not_found_handling = "single-page-application"
 
 # Optional: set routes when binding a custom domain in code
 # routes = [
